force-app/main/default/objects/Pulse_Survey_Result__c/Pulse_Survey_Result__c.object-meta.xml
<CustomObject>
    <label>Pulse Survey Result</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Purse Survey Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pulse Survey Results</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>