force-app/main/default/objects/Pulse_Survey_Result__c/fields/Are_You_Users_Manager__c.field-meta.xml
<CustomField>
    <fullName>Are_You_Users_Manager__c</fullName>
    <formula>Owner:User.ManagerId  = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Are You Users Manager</label>
    <type>Checkbox</type>
</CustomField>