force-app/main/default/objects/Pulse_Survey_Result__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Purse_Survey_Results</relationshipName>
    <type>Lookup</type>
</CustomField>