force-app/main/default/objects/Pulse_Survey_Result__c/fields/Responded__c.field-meta.xml
<CustomField>
    <fullName>Responded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>boolean flag to check wether survey has a response</description>
    <label>Responded</label>
    <type>Checkbox</type>
</CustomField>