force-app/main/default/objects/Pulse_Survey_Result__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
                <label>Amazing</label>
            </value>
            <value>
                <fullName>green</fullName>
                <label>A</label>
            </value>
            <value>
                <fullName>yellow</fullName>
                <label>B</label>
            </value>
            <value>
                <fullName>red</fullName>
                <label>C</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>