force-app/main/default/objects/Pulse_Survey_Result__c/fields/Score_Numerical__c.field-meta.xml
<CustomField>
    <fullName>Score_Numerical__c</fullName>
    <formula>CASE( Score__c ,
&quot;Gold&quot;,10,
&quot;green&quot;,5,
&quot;yellow&quot;,3,
&quot;red&quot;,1,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score Numerical</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>