force-app/main/default/objects/Pulse_Survey_Result__c/fields/Survey_URL_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Survey_URL_DateTime__c</fullName>
    <description>each survey link has a date appended to stop users from clikcing on one survey link multiple times</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Survey URL DateTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>